# set-winfoldericon-python

./: LICENSE  README.md  pyproject.toml  set_winfoldericon.py
